--- a/fend/package.json
+++ b/fend/package.json
@@ -8,9 +8,13 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/styles": "^5.10.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emoji-picker-react": "^4.2.0",
+    "jquery": "^3.6.1",
+    "material-ui": "^1.0.0-beta.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-indiana-drag-scroll": "^2.2.0",
