--- a/fend/package.json
+++ b/fend/package.json
@@ -16,6 +16,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
     "emoji-picker-react": "^4.2.0",
+    "izimodal": "^1.6.1",
     "jquery": "^3.6.1",
     "material-ui": "^1.0.0-beta.47",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "simple-react-lightbox": "^3.6.9-0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
