--- a/fend/package.json
+++ b/fend/package.json
@@ -25,6 +25,7 @@
     "react-indiana-drag-scroll": "^2.2.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "react-svg": "^15.1.10",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "simple-react-lightbox": "^3.6.9-0",
